test: add user test that handle it information (#22)
* feat: add test utility method and apply phon number

* feat: add feature for test

* test: add test that update user information

* Change the signup test to suit api changes

* fix: unknown parameter in userRepository

* fix: bug fixes

* feat: update db name for user sql