@@ -34,9 +34,9 @@ public class TestAuthProvider implements TestAuthSupplier {
   private EntityManager em;
 
   private final List<User> testUsers = Arrays.stream(TestUser.values())
-    .toList()
+    .collect(Collectors.toList())
     .stream().map(TestUser::getUser)
-    .toList();
+    .collect(Collectors.toList());
 
 
   public TokenInfo getTokenInfo(TestUser testUser) {
@@ -46,18 +46,19 @@ public class TestAuthProvider implements TestAuthSupplier {
     ).get("data").getTokenInfo();
   }
 
+  @Transactional
   public void joinAllTestUser() {
     testUsers
       .stream()
-      .peek(user -> user.changePassword(passwordEncoder.encode(user.getPassword())))
+      .peek(user -> user.changePassword(passwordEncoder.encode(TestUser.testPassword)))
       .forEach(userRepository::save);
   }
 
   @Transactional
   public void clearAllTestUser() {
-    List<Long> ids = testUsers.stream().map(User::getId).toList();
-    em.createQuery("DELETE FROM users u WHERE u.id in :ids")
-      .setParameter("ids", ids)
+    List<String> emails = testUsers.stream().map(User::getEmail).collect(Collectors.toList());
+    em.createQuery("DELETE FROM users u WHERE u.email in :emails")
+      .setParameter("emails", emails)
       .executeUpdate();
   }
 
